# TexConverter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codestyle.xml
examples/: CMakeLists.txt
examples/image_to_tex/: CMakeLists.txt  image_to_tex.cpp
examples/tex_to_image/: CMakeLists.txt  tex_to_image.cpp  wurt.tex
src/: Converter.cpp  Image.cpp
src/include/TexConverter/: Converter.hpp  Image.hpp
src/private/: gaussian_blur.hpp
